updated many thing hugit add .!

--- a/src/input.css
+++ b/src/input.css
@@ -5,3 +5,10 @@
 .card {
     @apply w-[100px] h-[100px] border-2 border-blue-500 rounded-2xl
 }
+
+.visible-box{
+    @apply bg-white absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 rounded-3xl p-12 flex flex-col items-center scale-125 dark:bg-csDark 
+}
+.hiddenbox{
+    @apply scale-0 -top-11
+}
